# Bird

./: .bumpversion.cfg  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  animation_output.txt  book.json  package-lock.json  package.json
apps/: CMakeLists.txt  app.cpp  filewrite.cpp
chapters/: basics.md
chapters/basics/: comms.md  example.md  functions.md  structure.md
chapters/features/: cpp11.md  ides.md  modules.md  small.md  utilities.md
chapters/install/: installing.md  packaging.md
chapters/intro/: dodonot.md  installing.md  newcmake.md  running.md
chapters/projects/: submodule.md
chapters/testing/: googletest.md
examples/: CMakeLists.txt
examples/extended-project/: CMakeLists.txt
examples/fetch/: CMakeLists.txt
examples/root-dict/: CMakeLists.txt
examples/root-simple/: CMakeLists.txt
examples/root-usefile/: CMakeLists.txt
examples/simple-project/: CMakeLists.txt
include/modern/: display.hpp  elements.hpp  keyboard.hpp  lib.hpp  utils.hpp
src/: CMakeLists.txt  display.cpp  elements.cpp  keyboard.cpp  lib.cpp
tests/: CMakeLists.txt  testlib.cpp
